  * UX upgrade, playback support for m4a files.
  * UX upgrade, search result filters re-arranged.
  * UX upgrade, main search button gone, updated search text box to include
    clickable search icon.
  * UX upgrade, filters re-arranged.
  * UX upgrade, searches can be up to 50 characters long.
  * UX upgrade, either disconnected or turbocharged, no idle state.
    Disconnected only if it cannot connect to the internet.
  * UX bugfix, iTunes options were not visible for Windows users.
  * UX bugfix, fixes possible UI freeze on startup.
  * UI bugfix, sending songs to iTunes on Mac is now done in a single process.
  * Mac OSX Lion compatible.
  * Bugfix, issue where opening a torrent from maglnk.com would result in a 
    double invocation of the Partial Dialog window.
  * Bugfix, when user didn't start a partial download the torrent wouldn't be
    deleted.

 -- FrostWire Team <contact@frostwire.com>  Fri, 15 Jul 2011 15:13:16 -0500

frostwire (5.0.6) stable; urgency=high

  * New feature, Send file. Available on File Menu and Transfer Manager.
  * New feature, Send folder. Available on File Menu and Transfer Manager.
  * UX upgrade, we now have a [+] icon next to search result file names to
    show partial download dialog.
  * UX upgrade, when a partial download is cancelled, the entry is removed
    from transfers.
  * UX update on partial download dialog. Includes new text filter.
  * UX fix, Library search now also looks for .torrents on "Torrents" folder.
  * UX fix, Mac OSX file menu does no longer show "Exit" action.
  * Fixes bug, incomplete files are no longer exported to iTunes playlist.
  * UX update, Help Menu now says "Sharing Help". Items rearranged.
  * UX update, rearranged View options into single panel.
  * UX update, torrent seeding settings are now a control of its own with
    an explanation of what seeding is.
  * UX update, the installation wizard now forces the user to decide if